Version 1.8.0.
- Random-based functions take `RandomGenerator` arguments instead of `Random`.
- Add a `isPowerOf2` extension.